add openapi bits for heritage
